# codecam

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  app.py  cam  capture_commands.fish  codecam.fish  codecam.sh  pyproject.toml  selected_files.json  snapshot.py
.github/workflows/: ci.yml  release.yml
codecam/: cli.py  web.py
templates/: index.html
